--- a/Pages/Products/ProductCard.razor
+++ b/Pages/Products/ProductCard.razor
@@ -4,7 +4,7 @@
 
 <section class="product-card">
     <div class="product-card__container">
-        @if (productModel is null || user is null || userState is null)
+        @if (productModel is null || userState is null)
         {
             <Loader />
         }
@@ -30,73 +30,84 @@
                         }
                     </div>
                 </div>
-                <div class="product-block__features-blocks">
-                    @if (userState.Identity.IsAuthenticated)
-                    {
-                        <div class="features-block__choose-blocks">
-                            <div class="choose-blocks__color-choose-block">
-                                <h2 class="color-choose-block__title">Выберите цвет</h2>
-                                <div class="color-choose-block__colors-block">
-                                    @foreach (var color in allCollors)
-                                    {
-                                        <input class="colors-block__color @(SelectedColor == color ? "selected-button" : string.Empty)" @onclick="() => ClickOnColor(color)" type="button" value="@color">
-                                    }
-                                </div>
-                            </div>
-                            <div class="choose-blocks__size-choose-block">
-                                <h2 class="size-choose-block__title">Выберите размер</h2>
-                                <div class="size-choose-block__sizes-block">
-                                    @foreach (var size in allSizes)
-                                    {
-                                        <input class="sizes-block__size @(SelectedSize == size ? "selected-button" : string.Empty)" @onclick="() => ClickOnSize(size)" type="button" value="@size">
-                                    }
-                                </div>
-                            </div>
-                        </div>
-                    }
-                    <div class="features-block__info-block">
-                        <h2 class="info-block__title">Характеристики</h2>
-                        <div class="info-block__blocks-features">
-                            @foreach (var feature in productModel.Features)
-                            {
-                                <div class="blocks-features__feature">
-                                    <span class="feature__name">@feature.Key</span>
-                                    <span class="feature__splitter"></span>
-                                    <span class="feature__value">@feature.Value</span>
-                                </div>
-                            }
-                        </div>
-                    </div>
-                </div>
-                <div class="product-block__submut-block">
-                    <span class="submut-block__product-price">@productModel.Price.ToString("### ### ###") ₽</span>
-                    @if (userState.Identity.IsAuthenticated)
-                    {
-                        if (!Db.Products.Any(product => product.Article.Model.Id == productModel.Id || product.Article.Id == SelectedProductArticle.Id))
+                @if (userState.Identity.IsAuthenticated || productModel.Features.Count != 0)
+                {
+                    <div class="product-block__features-blocks">
+                        @if (userState.Identity.IsAuthenticated)
                         {
-                            <button class="submut-block__empty-product-button" type="button" disabled>Товара нет в наличии</button>
+                            <div class="features-block__choose-blocks">
+                                <div class="choose-blocks__color-choose-block">
+                                    <h2 class="color-choose-block__title">Выберите цвет</h2>
+                                    <div class="color-choose-block__colors-block">
+                                        @foreach (var color in allCollors)
+                                        {
+                                            <input class="colors-block__color @(SelectedColor == color ? "selected-button" : string.Empty)" @onclick="() => ClickOnColor(color)" type="button" value="@color">
+                                        }
+                                    </div>
+                                </div>
+                                <div class="choose-blocks__size-choose-block">
+                                    <h2 class="size-choose-block__title">Выберите размер</h2>
+                                    <div class="size-choose-block__sizes-block">
+                                        @foreach (var size in allSizes)
+                                        {
+                                            <input class="sizes-block__size @(SelectedSize == size ? "selected-button" : string.Empty)" @onclick="() => ClickOnSize(size)" type="button" value="@size">
+                                        }
+                                    </div>
+                                </div>
+                            </div>
+                        }
+                        @if (productModel.Features.Count != 0)
+                        {
+                            <div class="features-block__info-block">
+                                <h2 class="info-block__title">Характеристики</h2>
+                                <div class="info-block__blocks-features">
+                                    @foreach (var feature in productModel.Features)
+                                    {
+                                        <div class="blocks-features__feature">
+                                            <span class="feature__name">@feature.Key</span>
+                                            <span class="feature__splitter"></span>
+                                            <span class="feature__value">@feature.Value</span>
+                                        </div>
+                                    }
+                                </div>
+                            </div>
+                        }
+                    </div>
+                }
+            <div class="product-block__submut-block">
+                <span class="submut-block__product-price">@productModel.Price.ToString("### ### ###") ₽</span>
+                @if (userState.Identity.IsAuthenticated)
+                {
+                    if (!Db.Products.Any(product => product.Article.Model.Id == productModel.Id || product.Article.Id == SelectedProductArticle.Id))
+                    {
+                        <button class="submut-block__empty-product-button" type="button" disabled>Товара нет в наличии</button>
+                    }
+                    else
+                    {
+                        if (user.ListFavourites.Products.Any(favoriteProduct => favoriteProduct.Article.Id == SelectedProductArticle.Id))
+                        {
+                            <button class="submut-block__remove-from-favorites-button" @onclick="RemoveProductFromFavorites" type="submit">Удалить из избранного</button>
                         }
                         else
                         {
-                            if (user.ListFavourites.Products.Any(favoriteProduct => favoriteProduct.Article.Id == SelectedProductArticle.Id))
-                            {
-                                <button class="submut-block__remove-from-favorites-button" @onclick="RemoveProductFromFavorites" type="submit">Удалить из избранного</button>
-                            }
-                            else
-                            {
-                                <button class="submut-block__add-to-favorites-button" @onclick="AddProductInFavorites" type="submit">Добавить в избранное</button>
-                            }
-                            if (user.Cart.Products.Any(favoriteProduct => favoriteProduct.Article.Id == SelectedProductArticle.Id))
-                            {
-                                <button class="submut-block__remove-from-cart-button" @onclick="RemoveProductFromCart" type="submit">Удалить из корзины</button>
-                            }
-                            else
-                            {
-                                <button class="submut-block__add-to-cart-button" @onclick="AddProductInCart" type="submit">Добавить в корзину</button>
-                            }
+                            <button class="submut-block__add-to-favorites-button" @onclick="AddProductInFavorites" type="submit">Добавить в избранное</button>
+                        }
+                        if (user.Cart.Products.Any(favoriteProduct => favoriteProduct.Article.Id == SelectedProductArticle.Id))
+                        {
+                            <button class="submut-block__remove-from-cart-button" @onclick="RemoveProductFromCart" type="submit">Удалить из корзины</button>
+                        }
+                        else
+                        {
+                            <button class="submut-block__add-to-cart-button" @onclick="AddProductInCart" type="submit">Добавить в корзину</button>
                         }
                     }
-                </div>
+                }
+                else
+                {
+                    <a class="submut-block__add-to-favorites-button" href="/account/authorization/login/@NavigationManager.Uri.Replace('/', '$')">Добавить в избранное</a>
+                    <a class="submut-block__add-to-cart-button" href="/account/authorization/login/@NavigationManager.Uri.Replace('/', '$')">Добавить в корзину</a>
+                }
+            </div>
             </div>
         }
     </div>
