--- a/Pages/Account/Favorites.razor
+++ b/Pages/Account/Favorites.razor
@@ -12,7 +12,7 @@
             }
             else
             {
-                if (currentUser.ListFavourites.Products.Count == 0)
+                if (currentUser.FavoriteList.Products.Count == 0)
                 {
                     <div class="favorites__empty-image"><img src="/images/favorites/Корзина с избранными товарами.png" alt="Изображение корзины с избранными товарами"></div>
                     <h3 class="favorites__empty-title">Похоже ваш список избранных товаров пуст</h3>
